replace icon & add padding for alignment issue

--- a/src/Components/Contact/Contact.module.scss
+++ b/src/Components/Contact/Contact.module.scss
@@ -33,6 +33,10 @@
     }
 }
 
+.emailHeading > h3 {
+    padding-bottom: 0.1em;
+}
+
 .emailHeading__link:hover {
     color: $section-heading-color;
 }
